# BunnyEngine

./: .clang-format  .gitmodules  CMakeLists.txt  CoordinateSystem.md  README.md  Todo.md  compile_glsl_shaders.ps1  compile_glsl_shaders.sh
assets/: config.ini
assets/model/: BattleshipScene2.glb  sphere.glb  suzanne.glb
engine/: CMakeLists.txt  Engine.cpp  Engine.h  main.cpp
engine-next/: CMakeLists.txt  EngineNext.txt
engine-next/src/: Config.cpp  Config.h  World.cpp  World.h  WorldComponents.h  WorldDataTranslator.cpp  WorldDataTranslator.h  WorldLoader.cpp  WorldLoader.h  WorldLoaderHelper.cpp  WorldLoaderHelper.h  WorldSystems.cpp  WorldSystems.h  main.cpp
lib/base/: CMakeLists.txt
lib/base/headers/: AlignHelpers.h  BoundingBox.h  BunnyGuard.h  BunnyResult.h  Error.h  FunctionStack.h  ImguiHelper.h  Input.h  Queue.h  Singleton.h  Timer.h  Transform.h  Window.h
lib/base/src/: BoundingBox.cpp  ImguiHelper.cpp  Input.cpp  Transform.cpp  Window.cpp
lib/physics/: CMakeLists.txt
lib/physics/headers/: Common.h  MassPoint.h  Vector.h  Vector3.h
lib/physics/src/: MassPoint.cpp  Vector.cpp  Vector3.cpp
lib/rendering/includes/: Renderer.h
lib/rendering/renderer/: CMakeLists.txt
lib/rendering/renderer/headers/: Camera.h  Light.h  Renderer.h
lib/rendering/renderer/includes/: Renderer.h
lib/rendering/renderer/src/: Camera.cpp
lib/rendering/vulkan/: CMakeLists.txt
lib/rendering/vulkan/headers/: AccelerationStructureBuilder.h  AccelerationStructureData.h  BaseVulkanRenderer.h  Camera.h  ComputePipelineBuilder.h  CullPass.h  Culling.h  CullingPass.h  DeferredShadingPass.h  DepthReducePass.h  Descriptor.h  ErrorCheck.h  FinalOutputPass.h  ForwardPass.h  Fundamentals.h  GBufferPass.h  GraphicsPipelineBuilder.h  Helper.h  Material.h  MaterialBank.h  Mesh.h  MeshBank.h  MeshPipelineBuilder.h  OceanPass.h  PbrForwardPass.h  PbrGraphicsPass.h  PipelineBuilder.h  QueueFamilyIndices.h  RaytracingPipelineBuilder.h  RaytracingShadowPass.h  RenderJob.h  RenderPass.h  Renderable.h  Shader.h  ShaderData.h  SkyPass.h  SwapChainSupportDetails.h  TextureBank.h  TexturePreviewPass.h  TransparencyAccumulatePass.h  (+10 more)
lib/rendering/vulkan/shader/: basic.frag  basic.vert  basicBindless.frag  basicDeferred.frag  basicInstanced.vert  basicUpdated.frag  basicUpdated.vert  compile.ps1  complex.glsl  culledInstanced.vert  culling.comp  fft.comp  fftBitReverse.comp  fftPingPong.comp  fftTwiddleFactor.comp  finalOutput.frag  gbuffer.frag  pbr.glsl  pbrCommon.glsl  pbrCulledInstanced.vert  pbrDeferred.frag  pbrForward.frag  pbrGBuffer.frag  pbrScreenQuad.vert  rt.glsl  rtbasic.rgen  rtbasic.rmiss  rtshadow.chit  rtshadow.miss  rtshadow.rchit  rtshadow.rmiss  screenQuad.vert  sky.comp  texturePreview.frag  transparentAccum.frag  transparentComp.frag  wave.frag  wave.mesh  waveConstruct.comp  waveSpectrum.comp  (+3 more)
lib/rendering/vulkan/src/: AccelerationStructureBuilder.cpp  BaseVulkanRenderer.cpp  Camera.cpp  ComputePipelineBuilder.cpp  CullPass.cpp  Culling.cpp  CullingPass.cpp  DeferredShadingPass.cpp  DepthReducePass.cpp  Descriptor.cpp  FinalOutputPass.cpp  ForwardPass.cpp  GBufferPass.cpp  GraphicsPipelineBuilder.cpp  Helper.cpp  Material.cpp  MaterialBank.cpp  Mesh.cpp  MeshBank.cpp  MeshPipelineBuilder.cpp  OceanPass.cpp  PbrForwardPass.cpp  PbrGraphicsPass.cpp  PipelineBuilder.cpp  RaytracingPipelineBuilder.cpp  RaytracingShadowPass.cpp  RenderJob.cpp  RenderPass.cpp  Renderable.cpp  Shader.cpp  SkyPass.cpp  TextureBank.cpp  TexturePreviewPass.cpp  TransparencyAccumulatePass.cpp  TransparencyCompositePass.cpp  Utils.cpp  Vertex.cpp  VulkanGraphicsRenderer.cpp  VulkanRenderResources.cpp  VulkanRenderer.cpp  (+4 more)
lib/task-system/: CMakeLists.txt
lib/task-system/headers/: Task.h  TaskManager.h
lib/task-system/src/: Task.cpp  TaskManager.cpp
lib/time/: CMakeLists.txt
lib/time/headers/: Timer.h
noise-generator/: CMakeLists.txt  main.cpp
playground/: CMakeLists.txt  main.cpp
